--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -154,6 +154,7 @@
     <script src="app/app.js"></script>
 
     <script src="app/controllers/profileController.js"></script>
+   <script src="app/controllers/editProfileController.js"></script>
     <script src="app/controllers/loginController.js"></script>
     <script src="app/controllers/verifyController.js"></script>
     <script src="app/controllers/leagueController.js"></script>
