vahans current changes

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -48,6 +48,10 @@
             <li class="sidebar-brand">
                 <a href="#headTab" onclick=$( "#menu-close").click();>Nexus</a>
             </li>
+            
+                        <li>
+                <a href="#news" onclick=$( "#menu-close").click();>news</a>
+            </li>
 
             <li>
                 <a href="#services" onclick=$( "#menu-close").click();>Services</a>
@@ -69,19 +73,12 @@
                 <a href="#/league" onclick=$( "#menu-close").click();>League of Legends</a>
             </li>
             <li>
-                <a href="#/aboutUs" onclick=$( "#menu-close").click();>About Us</a>
-            </li>
-            <li>
 
             </li>
             <button type="submit" id="logoff" ng-show="loginStatus" class="pad btn btn-dark btn-lg" ng-click="logout()">Logoff</button>
             </li>
         </ul>
         <br>
-        <center>
-            <div align=”center”><img src="images/NexusFinal.png" width="231" height="214" border="0">
-            </div>
-        </center>
     </nav>
     <!--ul class="nav nav-pills">
 
