Made the news clickable
Minor change on news

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -50,7 +50,7 @@
             </li>
             
                         <li>
-                <a href="#news" onclick=$( "#menu-close").click();>news</a>
+                <a href="#news" onclick=$( "#menu-close").click();>News</a>
             </li>
 
             <li>
