--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="nexusApp">
+<html ng-cloak ng-app="nexusApp">
 
 <head>
     <link href="styles/bootstrap.min.css" rel="stylesheet" type="text/css">
