--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -157,6 +157,9 @@
     <script src="app/controllers/leagueController.js"></script>
     <script src="app/controllers/messageController.js"></script>
     <script src="app/controllers/createUserController.js"></script>
+    <script src="app/controllers/learnMoreController.js"></script>
+    <script src="app/controllers/viewMoreGamesController.js"></script>
+    
     <script src="scripts/ngDialog.js"></script>
     <link rel="stylesheet" href="styles/bootstrap.css">
     <link rel="stylesheet" href="styles/ngDialog.css">
