News Feed Changes and other changes
Made news feed for LOL and moved some things around

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -49,12 +49,12 @@
                 <a href="#headTab" onclick=$( "#menu-close").click();>Nexus</a>
             </li>
             
-                        <li>
-                <a href="#news" onclick=$( "#menu-close").click();>News</a>
+            <li>
+                <a href="#services" onclick=$( "#menu-close").click();>Services</a>            
             </li>
 
             <li>
-                <a href="#services" onclick=$( "#menu-close").click();>Services</a>
+                <a href="#news" onclick=$( "#menu-close").click();>News</a>
             </li>
             <li>
                 <a href="#about" onclick=$( "#menu-close").click();>About</a>
@@ -67,7 +67,7 @@
                 <a href="#/profile" ng-show="loginStatus" onclick=$( "#menu-close").click();>profile</a>
             </li>
             <li>
-                <a href="#/messages" onclick=$( "#menu-close").click();>messages</a>
+                <a href="#/messages" onclick=$( "#menu-close").click();>Messages</a>
             </li>
             <li>
                 <a href="#/league" onclick=$( "#menu-close").click();>League of Legends</a>
