--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -46,31 +46,31 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#headTab" onclick=$( "#menu-close").click();>Nexus</a>
+                <a href="#top" onclick=$("#menu-close").click();>Nexus</a>
             </li>
             
                         <li>
-                <a href="#news" onclick=$( "#menu-close").click();>News</a>
+                <a href="#news" onclick=$("#menu-close").click();>News</a>
             </li>
 
             <li>
-                <a href="#services" onclick=$( "#menu-close").click();>Services</a>
+                <a href="#services" onclick=$("#menu-close").click();>Services</a>
             </li>
             <li>
-                <a href="#about" onclick=$( "#menu-close").click();>About</a>
+                <a href="#about" onclick=$("#menu-close").click();>About</a>
             </li>
 
             <li>
-                <a href="#portfolio" onclick=$( "#menu-close").click();>Games</a>
+                <a href="#portfolio" onclick=$("#menu-close").click();>Games</a>
             </li>
             <li>
-                <a href="#/profile" ng-show="loginStatus" onclick=$( "#menu-close").click();>profile</a>
+                <a href="#/profile" ng-show="loginStatus" onclick=$("#menu-close").click();>profile</a>
             </li>
             <li>
-                <a href="#/messages" onclick=$( "#menu-close").click();>messages</a>
+                <a href="#/messages" onclick=$("#menu-close").click();>messages</a>
             </li>
             <li>
-                <a href="#/league" onclick=$( "#menu-close").click();>League of Legends</a>
+                <a href="#/league" onclick=$("#menu-close").click();>League of Legends</a>
             </li>
             <li>
 
