First attempt at file adding probably wont work

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -153,7 +153,10 @@
     <script src="scripts/ngDialog.js"></script>
     <script src="scripts/sha256.js"></script>
     <script src="app/app.js"></script>
-
+    <script src="scripts/FileAPI.min.js"></script>
+            <script src="scripts/ng-file-upload-all.min.js"></script>
+    <script src="scripts/ng-file-upload-shim.min.js"></script>
+    <script src="scripts/ng-file-upload.min.js"></script>
     <script src="app/controllers/profileController.js"></script>
     <script src="app/controllers/editProfileController.js"></script>
     <script src="app/controllers/loginController.js"></script>
@@ -164,10 +167,11 @@
     <script src="app/controllers/learnMoreController.js"></script>
     <script src="app/controllers/viewMoreGamesController.js"></script>
     <script src="app/controllers/searchedProfileController.js"></script>
-
+    <script src="scripts/ng-img-crop.js"></script>
     <script src="scripts/ngDialog.js"></script>
     <link rel="stylesheet" href="styles/bootstrap.css">
     <link rel="stylesheet" href="styles/ngDialog.css">
+    <link rel="stylesheet" href="scripts/ng-img-crop.css">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
