--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -80,6 +80,9 @@
                 <a href="#worldOfWarcraft" data-target="#worldOfWarcraft" onclick=$( "#menu-close").click();> World of Warcraft</a>
                    
             </li>
+            <li>
+                <a href="#diablo3" data-target="#diablo3" onclick=$( "#menu-close").click();>Diablo 3</a>
+            </li>
             <button type="submit" id="logoff" ng-show="loginStatus" class="pad btn btn-dark btn-lg" ng-click="logout()">Logoff</button>
             </li>
         </ul>
