--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -161,6 +161,7 @@
     <script src="app/controllers/profileController.js"></script>
     <script src="app/controllers/editProfileController.js"></script>
     <script src="app/controllers/loginController.js"></script>
+    <script src="app/controllers/worldOfWarcraftController.js"></script>
     <script src="app/controllers/verifyController.js"></script>
     <script src="app/controllers/leagueController.js"></script>
     <script src="app/controllers/messageController.js"></script>
