Wow gear showing link and tooltip
400 lines for the lulz

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -2,6 +2,7 @@
 <html ng-cloak ng-app="nexusApp">
 
 <head>
+    <script type="text/javascript" src="//wow.zamimg.com/widgets/power.js"></script><script>var wowhead_tooltips = { "colorlinks": true, "iconizelinks": true, "renamelinks": true }</script>
     <link href="styles/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
