fix 12 links and some css bs

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -164,6 +164,7 @@
     <script src="scripts/ng-file-upload.min.js"></script>
     <script src="app/controllers/profileController.js"></script>
     <script src="app/controllers/editProfileController.js"></script>
+    <script src="app/controllers/diablo3Controller.js"></script>
     <script src="app/controllers/loginController.js"></script>
     <script src="app/controllers/worldOfWarcraftController.js"></script>
     <script src="app/controllers/verifyController.js"></script>
