--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -173,6 +173,7 @@
     <script src="app/controllers/createUserController.js"></script>
     <script src="app/controllers/learnMoreController.js"></script>
     <script src="app/controllers/viewMoreGamesController.js"></script>
+    <script src="app/controllers/leagueResultController.js"></script>
     <script src="app/controllers/searchedProfileController.js"></script>
     <script src="app/services/summonerInfo.js"></script>
     
