Forum menu link and forum account creation on sign up.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -84,6 +84,9 @@
             <li>
                 <a href="#diablo3" data-target="#diablo3" onclick=$("#menu-close").click();>Diablo 3</a>
             </li>
+            <li>
+            	<a href="http://www.comp490.duckdns.org:8080/forums" target="_blank">Forums</a>
+            </li>
             <button type="submit" id="logoff" ng-show="loginStatus" class="pad btn btn-dark btn-lg" ng-click="logout()">Logoff</button>
             </li>
         </ul>
