--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -178,6 +178,7 @@
     <script src="app/controllers/viewMoreGamesController.js"></script>
     <script src="app/controllers/leagueResultController.js"></script>
     <script src="app/controllers/searchedProfileController.js"></script>
+    <script src="app/controllers/matchmakingController.js"></script>
     <script src="app/services/wowTabService.js"></script>
     <script src="app/services/summonerInfo.js"></script>
     
