--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -186,6 +186,13 @@
     <link rel="stylesheet" href="styles/bootstrap.css">
     <link rel="stylesheet" href="styles/ngDialog.css">
     <link rel="stylesheet" href="scripts/ng-img-crop.css">
+    <link rel="stylesheet" href="styles/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="font-awesome/fonts/fontawesome-webfont.svg">
+    <link rel="stylesheet" href="font-awesome/scss/font-awesome.scss">
+    <link rel="stylesheet" href="styles/bootstrap-3.3.5-dist/fonts/glyphicons-halflings-regular.eot">
+    <link rel="stylesheet" href="styles/bootstrap-3.3.5-dist/fonts/glyphicons-halflings-regular.ttf">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
