added tabs for matchmaking

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -162,7 +162,7 @@
     <script src="scripts/sha256.js"></script>
     <script src="app/app.js"></script>
     <script src="scripts/FileAPI.min.js"></script>
-            <script src="scripts/ng-file-upload-all.min.js"></script>
+      <script src="scripts/ng-file-upload-all.min.js"></script>
     <script src="scripts/ng-file-upload-shim.min.js"></script>
     <script src="scripts/ng-file-upload.min.js"></script>
     <script src="app/controllers/profileController.js"></script>
@@ -180,6 +180,7 @@
     <script src="app/controllers/matchmakingController.js"></script>
     <script src="app/services/wowTabService.js"></script>
     <script src="app/services/summonerInfo.js"></script>
+    <script src="app/services/matchmakingService.js"></script>
     
     <script src="scripts/ng-img-crop.js"></script>
     <script src="scripts/ngDialog.js"></script>
